# media-session-reader

./: Cargo.toml  README  README.md
examples/: test.rs
src/: lib.rs  linux.rs  types.rs  windows.rs
src/types/: cover.rs  enums.rs  mod.rs  track.rs
