[package]
name = "media-session-reader"
version = "0.0.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams"
] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2"
