[package]
name = "media-session-reader"
version = "0.0.1"
edition = "2024"

description = "Cross-platform Rust library to read the current media session"
license = "MIT"
repository = "https://github.com/marioded/media-session-reader"
readme = "README.md"
keywords = ["media", "player", "windows", "linux"]
categories = ["multimedia", "os"]

[dependencies]
base64 = "0.22.1"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams"
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
zvariant = "5"
reqwest = { version = "0.12", features = ["blocking"] }